Modifications ergonomiques timer grapĥique